--- a/src/assets/Styles/ModalHorario.css
+++ b/src/assets/Styles/ModalHorario.css
@@ -1,20 +1,40 @@
-.back-horario{
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: 4;
-    background-color: rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(2px);
+
+.horario{
+    width: 80%;
+    height: 80%;
+    margin-left: 10%;
+    margin-top: 5%;
+    display: grid;
+    grid-template-columns: repeat(4, 4fr);
+}
+
+.horario select{
+    color: white;
+    background-color: #252323;
+    height: 60%;
+    border-radius: 7px;
+}
+
+.horario p{
+    text-align: center;
+}
+
+.acept-button{
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 80%;
+    height: 10%;
+    margin-left: 10%;
 }
 
-.front-horario{
-    width: 40%;
+.acept-button button{
+    color: white;
+    background-color: #252323;
+    border :none;
+    border-radius: 7px;
+    width: 30%;
     height: 70%;
-    background-color: white;
-    border-radius: 20px;
-    box-shadow: 3px 3px 3px black;
-    background-color: #2ACD53;
+    cursor: pointer;
 }
+
