--- a/src/assets/Styles/BusinessRegister.css
+++ b/src/assets/Styles/BusinessRegister.css
@@ -15,6 +15,11 @@
 .conteiner-Register-2{
     width: 50%;
     height: 100%;
+}
+
+.conteiner-Register-2 form{
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
