--- a/src/assets/Styles/ModalBusiness.css
+++ b/src/assets/Styles/ModalBusiness.css
@@ -34,6 +34,11 @@
 .model-datos{
     width: 100%;
     height: 85%;
+}
+
+.model-datos form{
+    width: 100%;
+    height: 100%;
     display: grid;
     gap: 15px;
     grid-template-columns: repeat(4, 1fr);
