--- a/src/assets/Styles/ModalEstablecimiento.css
+++ b/src/assets/Styles/ModalEstablecimiento.css
@@ -7,6 +7,12 @@
     align-items: center;
 }
 
+.formEstablecimiento{
+    width: 100%;
+    height: 100%;    
+
+}
+
 .options-establecimiento{
     width: 80%;
     height: 20%;
