--- a/src/assets/Styles/ModalRestaurants.css
+++ b/src/assets/Styles/ModalRestaurants.css
@@ -140,6 +140,34 @@
     background-color: chartreuse;
 }
 
+.reservacionC{
+    width: 90%;
+    height: 20%;
+    margin-left: 5.5%;
+    background-color: rgb(255, 255, 255);
+}
+
+.reservacionC button{
+    background-color: #252323;
+    color:white;
+    border:#2ACD53;
+    height: 20%;
+    width: 20%;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.resena{
+    height: 20%;
+    width: 90%;
+    margin-left: 5.5%;
+    background-color: #252525;
+    color: white;
+    border-radius: 5px;
+    margin-top: 2%;
+    text-align: center;
+    
+}
 
 
 
