--- a/src/assets/Styles/RestaurantEdit.css
+++ b/src/assets/Styles/RestaurantEdit.css
@@ -4,6 +4,8 @@
     display: grid;
     grid-template-columns: repeat(2, 2fr);
     grid-template-rows: repeat(1, 90%);
+    
+    
 }
 
 .conteiner-edit-1{
@@ -12,6 +14,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    
+
 }
 
 .data-image{
@@ -27,6 +31,7 @@
     width: 200%;
     height: 100%;
     display: flex;
+    
 }
 
 .data-image-1-1{
@@ -43,6 +48,7 @@
     background-color: white;
     position: relative;
     overflow: hidden;
+    
 }
 
 
@@ -385,5 +391,77 @@
     height: 60%;
 }
 
+.overlay{
+    background-color: rgba(0, 0, 0 , 0.5);
+    position: fixed;
+    width: 100%;
+    height: 7%;
 
+   
+    
+}
 
+.modalContainer{
+    max-width: 600px;
+    width: 100%;
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    display: flex;
+    background-color: #ffffff;
+    box-shadow: 0px 0px 18px 0px rgba(0, 0, 0 , 0.75);
+    
+}
+
+img{
+    width: 250px;
+    object-fit: cover;
+    
+}
+
+.modalRight{
+    width: 100%;
+}
+
+.closeBtn{
+    position: fixed;
+    top: 8px;
+    right: 8px;
+}
+
+.content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    margin-top: 3rem;
+    padding: 1rem 2rem;
+    
+
+   
+}
+
+.btnContainer{
+    display: flex;
+    padding: 1rem 1rem;
+}
+
+.btnContainer button {
+    width: 100%;
+    margin: .5rem;
+    padding: 16px 0 ;
+    border: none;
+    color: #ffffff;
+}
+
+.btnPrimary {
+    background-color: #2ACD53;
+}
+
+.btnOutline {
+    background-color: #252323;
+}
+.bold {
+    font-weight: 600;
+}
