--- a/src/assets/Styles/ReservationCeo.css
+++ b/src/assets/Styles/ReservationCeo.css
@@ -1,4 +1,4 @@
-h1{
+h3{
     text-align: center;
 }
 
@@ -8,8 +8,7 @@ h1{
 }
 
 .table td, .table th{
-
-  padding: 8px;
+  padding: 1px;
 }
 .table tr:nth-child(even){
     color:#252525;
@@ -21,21 +20,21 @@ h1{
 }
 
 .table th{
- padding-top: 12px;
-  padding-bottom: 12px;
+ padding-top: 5px;
+  padding-bottom: 1px;
   text-align: left;
   background-color: #2ACD53;
   color: #252525;
 }
 .reservacion{
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: flex-start;
 }
 .rc{
-  width: 90%;
+  width: 100%;
   height: 30%;
   display: flex;
   justify-content: center;
