--- a/src/assets/Styles/RestaurantEdit.css
+++ b/src/assets/Styles/RestaurantEdit.css
@@ -377,7 +377,7 @@
     height: 100%;
     display: grid;
     grid-template-columns: repeat(3, 3fr);
-    grid-template-rows: repeat(1, 1fr);
+    grid-template-rows: repeat(2, 1fr);
 }
 
 .conteiner-options button{
@@ -396,14 +396,16 @@
     position: fixed;
     width: 100%;
     height: 7%;
+    
 
    
     
 }
 
 .modalContainer{
-    max-width: 600px;
+    max-width: 700px;
     width: 100%;
+    height: 70%;
     position: fixed;
     top: 40%;
     left: 50%;
@@ -422,6 +424,7 @@ img{
 
 .modalRight{
     width: 100%;
+    
 }
 
 .closeBtn{
@@ -438,21 +441,27 @@ img{
     margin-top: 3rem;
     padding: 1rem 2rem;
     
+    
+    
 
    
 }
 
 .btnContainer{
     display: flex;
-    padding: 1rem 1rem;
+    padding: 18rem 6rem;
+    
 }
 
 .btnContainer button {
-    width: 100%;
+    width: 40%;
     margin: .5rem;
-    padding: 16px 0 ;
+    padding: 6px 0 ;
     border: none;
     color: #ffffff;
+
+    
+    
 }
 
 .btnPrimary {
