--- a/src/assets/Styles/RestaurantEdit.css
+++ b/src/assets/Styles/RestaurantEdit.css
@@ -395,10 +395,12 @@
     background-color: rgba(0, 0, 0 , 0.5);
     position: fixed;
     width: 100%;
-    height: 7%;
-    
+    height: 100vh;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-   
     
 }
 
@@ -406,10 +408,6 @@
     max-width: 900px;
     width: 100%;
     height: 70%;
-    position: fixed;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%,-50%);
     display: flex;
     background-color: #ffffff;
     box-shadow: 0px 0px 18px 0px rgba(0, 0, 0 , 0.75);
