--- a/src/assets/Styles/RestaurantEdit.css
+++ b/src/assets/Styles/RestaurantEdit.css
@@ -403,6 +403,7 @@
 }
 
 .modalContainer{
+    z-index: 7;
     max-width: 900px;
     width: 100%;
     height: 70%;
@@ -412,18 +413,15 @@
     transform: translate(-50%,-50%);
     display: flex;
     background-color: #ffffff;
+    opacity: 1;
     box-shadow: 0px 0px 18px 0px rgba(0, 0, 0 , 0.75);
     
 }
 
-img{
-    width: 250px;
-    object-fit: cover;
-    
-}
 
 .modalRight{
     width: 100%;
+    z-index: 7;
     
 }
 
@@ -434,6 +432,7 @@ img{
 }
 
 .content{
+    z-index: 7;
     display: flex;
     flex-direction: column;
     justify-content: center;
