--- a/src/assets/Styles/Home.css
+++ b/src/assets/Styles/Home.css
@@ -176,3 +176,16 @@
     font-size: 2em;
     color: white;
 }
+
+.vermas{
+    width: 80px;
+    height: 20px;
+    background-color: #2ACD53;
+    border: #2ACD53;
+    color: black;
+    border-radius: 8px;
+    text-align: center;
+    font-size: 18px;
+    
+}
+
