[ADD] Search method 2/2

--- a/src/assets/Styles/ModalRestaurants.css
+++ b/src/assets/Styles/ModalRestaurants.css
@@ -151,17 +151,22 @@
     background-color: #252323;
     color:white;
     border:#2ACD53;
-    height: 8%;
-    width: 10%;
-    border-radius: 5px;
+    width: 25%;
+    height: 40px;
+    border-radius: 12px;
     cursor: pointer;
     align-items: center;
-    
 }
 
 .pu{
+    margin-top: 10px;
+    margin-bottom: 10px;
     text-align: center;
-    font-size: 18px;
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5em;
 }
 
 .resena{
@@ -187,6 +192,5 @@
     background-color: #252525;
     color: white;
     border-radius: 5px;
-    margin-top: 8%;
     text-align: center;
 }
