--- a/src/assets/Styles/Home.css
+++ b/src/assets/Styles/Home.css
@@ -1,10 +1,71 @@
 .slides-section{
+    width: 90%;
+    margin-left: 5%;
+    height: 450px;
+    overflow: hidden;
+    position: relative;
+}
+
+
+.slider-conteiner{
     width: 100%;
-    height: 300px;
+    height: 90%;
+    background-color: black;
+    display: flex;
+}
+
+.slide-objects{
+    width: 100%;
+    height: 100%;
+}
+
+.slide-objects img{
+    width: 100%;
+    object-fit: fill;
+    height: 100%;
+}
+
+.anterior{
+    position: absolute;
+    top: 0%;
+    width: 60px;
+    height: 90%;
+    transform: translateX(0.4%);
+    left: 0%;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 80px;
+    cursor: pointer;
+    transition: all 0.5s;
 }
+
+.anterior:hover{
+    background-color: rgba(0, 0, 0, 0.4);
+    color: white;
+    transition: all 0.5s;
+}
+
+.siguiente:hover{
+    background-color: rgba(0, 0, 0, 0.4);
+    transition: all 0.5s;
+    color: white;
+}
+
+.siguiente{
+    position: absolute;
+    top: 0%;
+    width: 60px;
+    height: 90%;
+    right: 0%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 80px;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+
 .restaurants-section{
     width: 100%;
     height: auto;
@@ -15,44 +76,6 @@
     margin-left: 2.5%;
     height: auto;
     border-top: 1px black solid;
-}
-
-.slider-conteiner{
-    width: 60%;
-    height: 70%;
-    display: flex;
-}
-
-.anterior{
-    width: 10%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 5em;
-}
-
-.anterior p{
-    cursor: pointer;
-}
-
-.slider-bar{
-    width: 80%;
-    height: 100%;
-    background-color: violet;
-}
-
-.siguiente{
-    width: 10%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 5em;
-}
-
-.siguiente p{
-    cursor: pointer;
 }
 
 .conteiner-view-restaurants{
@@ -178,14 +201,20 @@
 }
 
 .vermas{
-    width: 80px;
-    height: 20px;
-    background-color: #2ACD53;
-    border: #2ACD53;
+    width: 20%;
+    margin-left: 40%;
+    height: 50px;
     color: black;
+    border:none;
+    background: none;
     border-radius: 8px;
     text-align: center;
-    font-size: 18px;
+    font-size: 1.3em;
+}
+
+.vermas{
+    text-decoration: underline;
+    cursor: pointer;
     
 }
 
